# AVR-VMC-Thermal-Module

./: .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
src/: thermal.py
tests/: conftest.py  test_thermal.py
