[tool.poetry]
    name        = "bell-avr-vmc-thermal-module"
    version     = "0.1.0"
    description = "Thermal camera to MQTT module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Thermal-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python                         = ">=3.9,<3.12"
    adafruit-circuitpython-amg88xx = "1.2.20"
    loguru                         = "0.7.0"
    bell-avr-libraries             = "0.2.0a4"
    # https://github.com/NVIDIA/jetson-gpio/issues/79
    jetson-gpio = { version = "!=2.1.0", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
    pre-commit  = "3.3.3"
    pytest      = "7.4.0"
    pytest-mock = "3.11.1"
    pytest-cov  = "4.1.0"
    # required to be able to properly export
    # The `typing-extensions` package has the following compatible candidates `[Package('typing-extensions', '4.6.3')]`;  but, the exporter dependency walker previously elected `typing-extensions (4.7.0)` which is not compatible with the dependency `typing-extensions (>=4.6.0,<4.7.0)`. Please contribute to `poetry-plugin-export` to solve this problem.
    typing-extensions = "4.7.1"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[tool.ruff]
    ignore = ["E501"]
